made team responsibe and facts structure

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,9 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color: #FF900E;
+}
 
 .btn-primary{
     background-color: #FF900E;
@@ -37,6 +40,17 @@
     background-color: rgba(255, 144, 14, 0.1);
 }
 
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 
 /* header styles */
 
@@ -53,6 +67,7 @@
 .nav-item{
     list-style: none;
     margin-right: 30px;
+   
 }
 .nav-link{
     font-weight: 500;
@@ -79,10 +94,43 @@
 .banner-image{
     width: 100%;
 }
-
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+#quick-list{
+    font-weight: 500;
+}
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-link{
+    .navbar, 
+    .nav-link, 
+    .teams{
         flex-direction: column;
   }
+  .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features{
+    margin-left: 20px;
+  }
+}
+/* medium device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+        
+    }
+    .our-features{
+        margin: 50px auto;
+    }
 }
