--- a/styles/architects.css
+++ b/styles/architects.css
@@ -138,6 +138,19 @@ main > section{
 .fact-description{
     max-width: 540px;
 }
+/* sponsors related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: 5, 1fr;
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, 
@@ -145,8 +158,18 @@ main > section{
     .teams{
         flex-direction: column;
   }
-  .team-img-container{
-    grid-template-columns: repeat(1, 1fr);
+  .team-img-container,
+  .facts-container,
+  .sponsor-companies{
+    grid-template-columns: 1fr;
+  }
+  .facts-container{
+    justify-items: center;
+    gap: 24px;
+  }
+  .sponsor-companies{
+    justify-items: center;
+    gap: 50px;
   }
   .our-features{
     margin-left: 20px;
@@ -160,5 +183,9 @@ main > section{
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
     }
 }
