--- a/styles/architects.css
+++ b/styles/architects.css
@@ -146,7 +146,7 @@ main > section{
 }
 .sponsor-companies{
     display: grid;
-    grid-template-columns: 5, 1fr;
+    grid-template-columns: repeat(5, 1fr);
 }
 .sponsor-companies img{
     filter: grayscale(100%);
