--- a/styles/architects.css
+++ b/styles/architects.css
@@ -131,6 +131,21 @@ main > section{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+.featured-archited img{
+    width: 100%;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-bottom: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
 /* some facts styles */
 .facts-container{
     display: grid;
@@ -175,6 +190,7 @@ main > section{
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, 
+    .features,
     .nav-link, 
     .teams{
         flex-direction: column;
@@ -195,10 +211,14 @@ main > section{
   .our-features{
     margin-left: 20px;
   }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 /* medium device */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
         
     }
@@ -209,4 +229,7 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
     }
+    #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
 }
