--- a/styles/architects.css
+++ b/styles/architects.css
@@ -140,7 +140,7 @@ main > section{
     font-size: 1.5rem;
     font-weight: 500;
     margin-left: -100px;
-    margin-bottom: -100px;
+    margin-top: -100px;
 }
 #experience-year{
     font-size: 4rem;
